# vibe-cading

./: .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-FAQ.md  README.md  TODO.md  TODO_ARCHIVE.md  build.py  build.toml  copilot-instructions.md  engine_api.json  hatch_build.py  machine_profiles.json  machine_profiles.json.example  print_profiles.json.example  pyproject.toml  pytest.ini  requirements-ci.txt  todo.md  visual_contracts.toml
.agents/plans/: 2026-05-13-pre-oss-models-structure_design.md  2026-05-13-pre-oss-models-structure_req.md  INDEX.md
.claude/: settings.json
.claude/agents/: designer.md  developer.md
.claude/commands/: diff.md  init-workspace.md  preview.md  section.md  view.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: admin.prompt.md  designer.prompt.md  developer.prompt.md  lookback.prompt.md  overseer.prompt.md  planner.prompt.md
.github/workflows/: ci.yml  cla.yml  engine-api.yml  release.yml
assets/: sample-gear.stl  sample-hinge.stl  sample-lliftarm.stl  sample-servo.stl
docs/: agentic-workflow.md  business-strategy.md  lego-technic.md  mcp-integration-plan.md  mcp.md  print-tolerances.md  releasing.md  screws.md
docs/archive/: mcp-integration-plan.md
docs/design_plans/: 2026-05-08-ci-baseline_design.md  2026-05-08-ci-baseline_req.md  2026-05-08-shared-model-loader_design.md  2026-05-08-shared-model-loader_req.md  2026-05-08-shared-step-primitives_design.md  2026-05-08-shared-step-primitives_req.md  2026-05-09-main-block-sweep_design.md  2026-05-09-main-block-sweep_req.md  2026-05-13-pre-oss-models-structure_design.md  2026-05-15-examples-directory_design.md  2026-05-15-examples-directory_req.md  2026-05-15-lego-technic-beam_design.md  2026-05-15-lego-technic-beam_req.md  2026-05-20-axle-hole-tip-to-tip-gauge_design.md  2026-05-21-axle-cross-hole-gauge_design.md  2026-05-22-axle-cross-arm-slot-clearance_design.md  2026-05-23-calibrate-helper_design.md  2026-05-23-calibrate-helper_req.md  2026-05-23-calibration-helper-generic_design.md  2026-05-23-calibration-helper-generic_req.md  2026-05-23-print-profile-foundation_design.md  2026-05-23-print-profile-foundation_req.md  2026-05-26-pin-hole-slip-refactor_design.md  2026-05-26-pin-hole-slip-refactor_req.md  2026-05-28-ci-topology-check_req.md  2026-05-28-concave-radius-default_design.md  2026-05-28-concave-radius-default_req.md  2026-05-28-deprecation-shim-cleanup_req.md  2026-05-28-env-var-prefix-drop_req.md  2026-05-29-visual-contract-freshness_design.md  2026-05-29-visual-contract-freshness_req.md  2026-06-02-devcontainer-nonroot_design.md  2026-06-02-pr19-visual-contract-ci-rca.md  2026-06-02-provider-agnostic-audit.md  2026-06-04-engine-api-allowed-values_design.md  (+26 more)
examples/: gear_from_iso.py  lego_technic_beam.py  screw_cutter.py  snap_fit_hook.py
models/: cq_utils.py  print_settings.py
models/lego/: __init__.py  (+4 more)
tests/: conftest.py  test_axle_cross_hole_gauge.py  test_axle_hole_gauge.py  test_cutter_overcut.py  test_env_parser.py  test_hinge.py  test_imports.py  test_lego_block.py  test_protocols.py  test_smoke.py  test_technic_axle_hole.py  test_technic_beam.py  test_technic_beam_perp.py  test_technic_l_liftarm.py  test_technic_pin_hole_profile.py  test_tolerance_profile.py
tools/: boolean_diff.py  calibrate.py  check_license_headers.py  check_no_main_blocks.py  check_polar_monotonicity.py  check_topology.py  check_visual_contract_freshness.py  face_catalog.py  face_distances.py  gen_engine_api.py  hole_finder.py  init-agy-runtime.sh  init-claude-runtime.sh  init_agy_runtime.py  model_loader.py  preview.py  section_slicer.py  step_preview.py  step_summary.py  validate_engine_api.py  view.py
vibe/: INSTRUCTIONS.md
vibe_cading/: __commit__.py  __init__.py  _env.py  cq_utils.py  engine_api.json  print_settings.py
(+220 files in other folders)
