[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe_cading"
version = "0.1.5"
description = "Parametric CadQuery models for mechanical parts, RC hardware, and Lego Technic adapters"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "LICENSE-FAQ.md"]
authors = [{ name = "madMarcus" }]
requires-python = ">=3.11"
keywords = [
    "cad",
    "cadquery",
    "3d-printing",
    "parametric",
    "lego-technic",
    "rc",
    "mechanical",
    "stl",
    "step",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "cadquery",
]

[project.optional-dependencies]
# AI interface (MCP stdio server, `python -m vibe_cading.mcp`).
# Pinned `>=1,<2` because the `mcp` SDK's v2 line is alpha/imminent — an
# unpinned bump must never break a clone mid-launch, and (the whole point of
# making this an *extra*) a transitive break in the mcp → starlette / uvicorn /
# pydantic tree must never leak onto a plain `pip install vibe_cading`.  See
# docs/design_plans/2026-06-18-mcp-subpackage_design.md (R5).
mcp = ["mcp>=1,<2"]

[project.urls]
Homepage = "https://github.com/fa-mc/vibe-cading"
Repository = "https://github.com/fa-mc/vibe-cading"
Issues = "https://github.com/fa-mc/vibe-cading/issues"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["vibe_cading"]

[tool.hatch.build.targets.sdist]
include = [
    "/vibe_cading",
    "/hatch_build.py",
]
